# search

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  searchConfig.cmake  searchConfig.cmake.in  uninstall.cmake
domains/: README.md
domains/2d_mapf/: action_space_2d_rob.hpp  action_space_2d_rob_experience.hpp  action_space_2d_rob_no_time_manhattan.hpp  collision_checker_2d.h  instance.h  run_2d_cbs.cpp  run_2d_cbs_or_ecbs.cpp  run_2d_cbs_or_ecbs_sipp.cpp  run_2d_cbs_sipp.cpp  run_2d_eacbs.cpp  run_2d_eaecbs.cpp  run_2d_ecbs.cpp  run_2d_pp.cpp  scene_interface_2d_grid.hpp  scene_interface_2d_rob.hpp  utils.hpp
domains/2d_robot_nav/: ActionScene2dRob.hpp  action_space_2d_ackerman_rob_msg.hpp  action_space_2d_ackermann_rob.hpp  action_space_2d_arm.hpp  action_space_2d_rob.hpp  action_space_2d_rob_edge.hpp  action_space_2d_rob_experience.hpp  action_space_2d_rob_mgs.hpp  action_space_2d_rob_mosaic.hpp  action_space_2d_rob_mtrrt.hpp  action_space_2d_rob_rrt.hpp  action_space_2d_rob_subcost.hpp  action_space_2d_rotation_rob.hpp  action_space_egraph_2d_rob.hpp  action_space_rotation_2d_grid.hpp  action_space_rotation_2d_rob.hpp  controllers_2d.hpp  experience_heuristic_2d.hpp  instance.h  run_2d.cpp  run_2d_ackerman_mgs.cpp  run_2d_ackermann_wastar.cpp  run_2d_arastar.cpp  run_2d_arm_wastar.cpp  run_2d_astar.cpp  run_2d_bfs.cpp  run_2d_dijkstra.cpp  run_2d_egraph_wastar.cpp  run_2d_egraph_wastar_nn.cpp  run_2d_epase.cpp  run_2d_lpastar.cpp  run_2d_lsslrta.cpp  run_2d_mgs.cpp  run_2d_mosaic.cpp  run_2d_mtrrt.cpp  run_2d_nparastar.cpp  run_2d_pase.cpp  run_2d_qpase.cpp  run_2d_realTimePlanner.cpp  run_2d_rotation_wastar.cpp  (+15 more)
domains/2d_robot_nav/data/: generate_data_fqi.cpp  generate_data_traj.cpp
domains/2d_robot_nav/scripts/: animate_VIN_trajectories_and_regions.py  animate_generated_states.py  regions.txt  trajectories.txt  vin_trajectories.txt  vis_walls.py  visualize_generated_states.py  visualize_hl_graph_mgs.py  visualize_motion_primatives.py  visualize_motion_primitives.py  visualize_paths.py  visualize_paths_partial_map.py  visualize_robot_arm_path.py  visualize_trajs_path.py  wall_map.txt
domains/2d_robot_nav/tests/: follow_wall.cpp
domains/3d_mapf/: action_space_3d_rob.hpp  run_3d_astar.cpp
domains/3d_robot_nav/: action_space_3d_rob.hpp  gen_maps.py  run_3d_astar.cpp  scene_interface_3d_rob.hpp  utils.hpp
domains/3d_robot_nav/data/: map_1.map  map_2.map  map_3.map  map_4.map  map_5.map  start_goal_1.txt  start_goal_2.txt  start_goal_3.txt  start_goal_4.txt  start_goal_5.txt
domains/3d_robot_nav/scripts/: visualize_paths.py
domains/manipulation/: MoveitInterface.hpp
domains/scripts/: load_mpwa_data.py
domains/sliding_tiles/: action_space_sliding_puzzle.hpp  heuristics.hpp  run_sliding_tiles_mpwa.cpp  run_sliding_tiles_wastar.cpp  utils.hpp
domains/sliding_tiles/scripts/: load_mpwa_data.py
include/common/: SceneInterface.hpp  State.hpp  action.hpp  actionSpace.hpp  action_space.hpp  baseHeuristic.hpp  base_heuristic.hpp  instrusive_heap.h  intrusive_heap.hpp  scene_interface.hpp  state.hpp  stdHeuristics.hpp  types.hpp
include/heuristics/: standardHeu.hpp  standard_heuristics.hpp
include/planners/: AStar.hpp  BFS.hpp  BestFirstSearch.hpp  astar.hpp  best_first_search.hpp  dijkstra.hpp  planner.h  planner.hpp  wAStar.hpp  wastar.hpp
include/search/action_space/: action_space.hpp  action_space_constrainable_mixin.hpp  action_space_experience_acceleratable_mixin.hpp  action_space_mgs.hpp  action_space_mixin.hpp  action_space_mosaic.hpp  constrained_action_space.hpp  edge_action_space.hpp  egraph_action_space.hpp  experience_accelerated_action_space.hpp  experience_accelerated_constrained_action_space.hpp  mtrrt_action_space.hpp  roadmap_action_space.hpp  rrt_action_space.hpp  subcost_action_space.hpp  subcost_constrained_action_space.hpp  subcost_experience_accelerated_constrained_action_space.hpp
include/search/common/: action_space.hpp  action_space_constrainable_mixin.hpp  base_heuristic.hpp  collisions.hpp  conflict_conversions.hpp  conflicts.hpp  constrained_action_space.hpp  constraints.hpp  distance.hpp  eigen_types.hpp  experience_graph.hpp  experiences.hpp  goal_conditions.hpp  goal_constraint.hpp  intrusive_heap.h  intrusive_heap.hpp  intrusive_heap_wrapper.h  intrusive_heap_wrapper.hpp  kdtree.hpp  mapf_utils.hpp  queue_general.h  queue_general.hpp  queue_multi.hpp  scene_interface.hpp  state.hpp  torch_utils.hpp  types.hpp  utils.hpp  world_objects.hpp
include/search/controllers/: base_controller.hpp
include/search/heuristics/: base_heuristic.hpp  custom_grid_heuristic.hpp  experience_heuristics.hpp  standard_heuristics.hpp
include/search/planners/: RTAA.hpp  arastar.hpp  astar.hpp  (+23 more)
scripts/: requirements.txt  setup.py  train.py  train_fqnet.py
scripts/datasets/: __init__.py  dataset_base.py  fqi_replay_buffer.py  normalizers.py  trajectories.py
scripts/losses/: __init__.py  fitted_qn_loss.py  gaussian_diffusion_loss.py  generic_losses.py
scripts/models/: __init__.py  layers.py  layers_attention.py
scripts/scene/: __init__.py  scene_2d.py  scene_interface_base.py
scripts/summaries/: __init__.py  summary_fitted_q_net.py  summary_trajectory_generation.py
scripts/trained/: config_vin_28x28.pkl  input.pkl  traced_vin_28x28.pt  vin_model.pth
scripts/trainer/: __init__.py  train_loaders.py  trainer.py
scripts/utils/: decorators.py
scripts/utils_torch/: __init__.py  convert_cpp.py  seed.py  torch_utils.py
src/common/: State.cpp  bfs3d.cpp  conflict_conversions.cpp  constraints.cpp  experience_graph.cpp
src/planners/: AStar.cpp  BFS.cpp  BestFirstSearch.cpp  RTAA.cpp  arastar.cpp  astar.cpp  best_first_search.cpp  bfs.cpp  dijkstra.cpp  eawastar.cpp  egraph_wastar.cpp  lpastar.cpp  lss_lrta.cpp  mgs.cpp  mosaic.cpp  multi_path_wastar.cpp  npara.cpp  nparastar.cpp  planner.cpp  realTimePlanner.cpp  real_time_search_planner.cpp  single_queue_planner.cpp  sipp.cpp  wAStar.cpp  wastar.cpp
src/scripts/: paths.yaml  visualize_2d_time_paths.py
test/common/: test_constraints.cpp  test_distance.cpp  test_queue.cpp
(+330 files in other folders)
